--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ### 数据源信息配置
 ########################################################
 #数据库地址
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=syzg
+spring.datasource.url=jdbc:sqlserver://192.168.168.191:1433;DatabaseName=syzg
 #数据库驱动
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #用户名
@@ -26,4 +26,10 @@ server.port=8080
 logging.level.root=info
 logging.level.org.springframework=info
 logging.level.org.mybatis=debug
-logging.level.com.example.dao=debug
+logging.level.com.example.dao=
+
+#mybatis.mapper-locations=classpath:mapper/*.xml
+
+spring.mvc.static-path-pattern=classpath:/static
+spring.resources.static-locations=/**
+
